--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
         {% endblock %}
 
     </head>
-    <body class="d-flex align-items-center py-4 bg-body-tertiary" data-bs-theme="dark">
+    <body class="d-flex align-items-center py-4 bg-body-tertiary">
         {% block body %}{% endblock %}
     </body>
 </html>
