--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -94,8 +94,8 @@
         }
 
         async function deleteUsers() {
-            var users = getUsers();
-            var request =  await fetch("{{ path('app_user_delete') }}", {
+            let users = getUsers();
+            let request =  await fetch("{{ path('app_user_delete') }}", {
                 method : 'POST',
                 headers : {
                     'Content-Type': 'application/json;charset=utf-8'
@@ -106,7 +106,7 @@
 
         async function banUsers() {
             const users = getUsers();
-            var request =  await fetch("{{ path('app_user_ban') }}", {
+            let request =  await fetch("{{ path('app_user_ban') }}", {
                 method : 'POST',
                 headers : {
                     'Content-Type': 'application/json;charset=utf-8'
@@ -117,7 +117,7 @@
 
         async function unbanUsers() {
             const users = getUsers();
-            var request =  await fetch("{{ path('app_user_unban') }}", {
+            let request =  await fetch("{{ path('app_user_unban') }}", {
                 method : 'POST',
                 headers : {
                     'Content-Type': 'application/json;charset=utf-8'
