--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -32,7 +32,7 @@
 {% endblock %}
 
 {% block body %}
-    <main class="form-signin w-100 m-auto">
+    <main class="form-signin m-auto">
         <h1 class="text-center">Registration</h1>
         <br>
         <div class="container">
