--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -40,12 +40,12 @@
         {% endif %}
         <div class="container">
             <form action="{{ path('app_login') }}" method="post">
-                <div class="form-floating mb-3 px-4">
-                    <input class="form-control" type="text" id="username" name="_username" value="{{ email }}">
+                <div class="form-floating mb-3">
+                    <input class="form-control px-4" type="text" id="username" name="_username" value="{{ email }}">
                     <label for="username">Email:</label>
                 </div>
-                <div class="form-floating mb-3 px-4">
-                    <input class="form-control" type="password" id="password" name="_password">
+                <div class="form-floating mb-3">
+                    <input class="form-control px-4" type="password" id="password" name="_password">
                     <label for="password">Password:</label>
                 </div>
 
